--- a/imageData2.ipynb
+++ b/imageData2.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,11 +75,14 @@
     "    #for filename in itertools.islice(filelist, 0, 5):\n",
     "        #print(filename)\n",
     "        img = Image.open('chest_xray/train/resized250x250/' + foldername + '/' + filename)\n",
-    "        imgData = list(img.getdata())\n",
-    "        imgData = np.asarray(imgData)\n",
+    "        #imgData = list(img.getdata())\n",
+    "        #imgData = np.asarray(imgData)\n",
+    "        #imgData = img.getdata()\n",
+    "        #imgData = np.asarray(imgData)\n",
+    "        imgData = np.asarray(img)\n",
     "        #print(imgData.shape)\n",
     "        #print(imgData.ndim)\n",
-    "        if imgData.ndim == 1:\n",
+    "        if imgData.ndim == 2:\n",
     "            x = imgData.reshape(250,250)\n",
     "            X.append(x)\n",
     "            if foldername == 'NORMAL':\n",
@@ -91,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +105,7 @@
       "length of x: 5216\n",
       "shape of y: (5216,)\n",
       "length of y: 5216\n",
-      "value of y[3873]: 1\n"
+      "value of y[0]: 1\n"
      ]
     }
    ],
@@ -113,11 +116,17 @@
     "print(\"length of x: \" + str(len(X)))\n",
     "print(\"shape of y: \" + str(y.shape))\n",
     "print(\"length of y: \" + str(len(y)))\n",
-    "print(\"value of y[3873]: \" + str(y[3873]))\n",
-    "#len(X)\n",
-    "#print(y.shape)\n",
-    "#len(y)\n",
-    "#y[3873]"
+    "print(\"value of y[0]: \" + str(y[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = Image.fromarray(X[1], 'L')\n",
+    "img.show()"
    ]
   },
   {
